--- a/benchmarks/data-lrat/pigeon-direct-data/Makefile
+++ b/benchmarks/data-lrat/pigeon-direct-data/Makefile
@@ -44,7 +44,7 @@ pigeon-direct-$(N)-pm-linear.data:
 	$(AGENERATOR) $(N) > pigeon-direct-$(N)-pm.cnf
 	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -o pigeon-direct-$(N)-pm.$(EXTENSION) 2>&1 | tee pigeon-direct-$(N)-pm-linear.data
 	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.$(EXTENSION) | tee -a pigeon-direct-$(N)-pm-linear.data
-#	rm -f pigeon-direct-$(N)-pm.$(EXTENSION)
+	rm -f pigeon-direct-$(N)-pm.$(EXTENSION)
 
 pigeon-direct-$(N)-constraint.data:
 	$(GENERATOR) $(N) > pigeon-direct-$(N)-constraint.cnf
