Generate DRAT files for Cook's proof

--- a/benchmarks/data-lrat/pigeon-cook-data/Makefile
+++ b/benchmarks/data-lrat/pigeon-cook-data/Makefile
@@ -2,8 +2,11 @@ INTERP = python3
 N = 4
 VLEVEL = 1
 
+LDIR = ~/repos/drat-trim
+
+
 GENERATOR = $(INTERP) ../../pigeon-cook.py
-CHECKER = ../../../lrat/lrat-check
+CHECKER = $(LDIR)/lrat-check
 GRABBER = $(INTERP) ../../grab_clauses.py
 
 p: pigeon-direct-$(N)-cook.data
@@ -11,7 +14,7 @@ p: pigeon-direct-$(N)-cook.data
 
 pigeon-direct-$(N)-cook.data:
 	$(GENERATOR) -n $(N) -r pigeon-direct-$(N)-cook | tee pigeon-direct-$(N)-cook.data
-	$(CHECKER) pigeon-direct-$(N)-cook.cnf pigeon-direct-$(N)-cook.lrat | tee -a pigeon-direct-$(N)-cook.data
+	$(CHECKER) pigeon-direct-$(N)-cook.cnf pigeon-direct-$(N)-cook.lrat pigeon-direct-$(N)-cook.drat | tee -a pigeon-direct-$(N)-cook.data
 	rm -f pigeon-direct-$(N)-cook.lrat
 data:
 	$(GRABBER) pigeon-direct-*-cook.data > pigeon-direct-cook.csv
