--- a/benchmarks/data-lrat/chew-data/Makefile
+++ b/benchmarks/data-lrat/chew-data/Makefile
@@ -6,7 +6,7 @@ SEED=123456
 FULLGENERATOR = ../../chew-code/parity
 GENERATOR = ../../chew-code/parity-cnf
 RANDOMIZER = ../../randomizer.py
-EXTRACTOR = ../../xor_extractor.py
+EXTRACTOR = ../../../extractor/xor_extractor.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../pcaas/lrat-check
 UPLOADER = ../../../pcaas/upload
