Tune clause cleaning

--- a/benchmarks/data-lrat/pigeon-tseitin-data/Makefile
+++ b/benchmarks/data-lrat/pigeon-tseitin-data/Makefile
@@ -8,7 +8,7 @@ RANDOMIZER = $(INTERP) ../../randomizer.py
 EXDIR = ../../../extractor
 EXTRACTOR = $(INTERP) $(EXDIR)/constraint_extractor.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
-CHECKER = ../../../pcaas/lrat-check
+CHECKER = ../../../lrat/lrat-check
 GRABBER = $(INTERP) ../../grab_clauses.py
 VGRABBER = $(INTERP) ../../grab_verification.py
 AVERAGE = $(INTERP) ../../average_csv.py
