--- a/benchmarks/data-lrat/chew-data/Makefile
+++ b/benchmarks/data-lrat/chew-data/Makefile
@@ -5,14 +5,14 @@ SEED=123456
 
 FULLGENERATOR = ../../chew-code/parity
 GENERATOR = ../../chew-code/parity-cnf
-RANDOMIZER = ../../randomizer.py
-EXTRACTOR = ../../../extractor/xor_extractor.py
+RANDOMIZER = $(INTERP) ../../randomizer.py
+EXTRACTOR = $(INTERP) ../../../extractor/xor_extractor.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../pcaas/lrat-check
 UPLOADER = ../../../pcaas/upload
-GRABBER = ../../grab_clauses.py
-VGRABBER = ../../grab_verification.py
-DGRABBER = ./grab_drat.py
+GRABBER = $(INTERP) ../../grab_clauses.py
+VGRABBER = $(INTERP) ../../grab_verification.py
+DGRABBER = $(INTERP) ./grab_drat.py
 EXTENSION = lrat
 HOST = whaleshark.ics.cs.cmu.edu
 PMODE = t
